force-app/main/default/objects/Module__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <label>Badge</label>
    <type>TextArea</type>
</CustomField>