force-app/main/default/objects/Module__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Business User</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Marketer</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>