force-app/main/default/objects/Module__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <description>Total points awarded</description>
    <inlineHelpText>Total points awarded</inlineHelpText>
    <label>Total Score</label>
    <summarizedField>Unit__c.Point_Score__c</summarizedField>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>