force-app/main/default/objects/Module__c/validationRules/Module_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Module_Activation</fullName>
    <active>true</active>
    <description>Checks for Roles and Skills assigment before activation</description>
    <errorConditionFormula>AND(Active__c, OR(ISBLANK(Role__c), ISPICKVAL(Skills__c, &apos;&apos;)))</errorConditionFormula>
    <errorMessage>Module&apos;s Roles and Skills must be assigned before activating the module.</errorMessage>
</ValidationRule>